[package]
name = "hy-rs"
version = "0.1.0"
edition = "2018"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.21"

[dependencies]
bitflags = "1.3"
num-derive = "0.3"
num-traits = "0.2"
rangemap = "0.1"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = "0.5"
kvm-ioctls = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.21"

[dev-dependencies]
mmap-rs = "0.1"

[[example]]
name = "getting-started"
path = "examples/getting-started.rs"
